work on the seed and finished the nav-projects

--- a/app/views/shared/_project-tabs.html.erb
+++ b/app/views/shared/_project-tabs.html.erb
@@ -1,16 +1,20 @@
 <div class="nav-tabs-tibo d-flex justify-content-center align-items-center nav pt-1" id="nav-tab" role="tablist">
   <div class='nav-line'></div>
-  <div class='nav-link nav-tabs-tibo__title active' id="all-tab" data-filter='all'>TRAVAUX</div>
+  <div class='nav-link nav-tabs-tibo__title active' id="all-tab" data-filter='all'>TOUTES PÉRIODES</div>
   <div class="seperator"><span>&#183;</span></div>
-  <div class='nav-link nav-tabs-tibo__title' id="marketing-tab" data-filter='Événementiel'>ÉVÉNEMENTIEL</div>
+  <div class='nav-link nav-tabs-tibo__title' id="marketing-tab" data-filter='Antiquité'>ANTIQUITÉ</div>
   <div class="seperator"><span>&#183;</span></div>
-  <div class='nav-link nav-tabs-tibo__title' id="identity-tab" data-filter='Univers graphique'>UNIVERS GRAPHIQUE</div>
+  <div class='nav-link nav-tabs-tibo__title' id="identity-tab" data-filter='Médiéval'>MÉDIÉVAL</div>
   <div class="seperator"><span>&#183;</span></div>
-  <div class='nav-link nav-tabs-tibo__title' id="illustration-tab" data-filter='Motion Design'>MOTION DESIGN</div>
+  <div class='nav-link nav-tabs-tibo__title' id="illustration-tab" data-filter='Renaissance'>RENAISSANCE</div>
   <div class="seperator"><span>&#183;</span></div>
-  <div class='nav-link nav-tabs-tibo__title' id="edition-tab" data-filter='Édition'>ÉDITION</div>
+  <div class='nav-link nav-tabs-tibo__title' id="edition-tab" data-filter='XVIIeXVIIIe'>XVIIe / XVIIIe</div>
   <div class="seperator"><span>&#183;</span></div>
-  <div class='nav-link nav-tabs-tibo__title' id="webdesign-tab" data-filter='Numérique'>NUMÉRIQUE</div>
+  <div class='nav-link nav-tabs-tibo__title' id="webdesign-tab" data-filter='XIXe'>XIXe</div>
+  <div class="seperator"><span>&#183;</span></div>
+  <div class='nav-link nav-tabs-tibo__title' id="webdesign-tab" data-filter='19001920'>1900/1920</div>
+  <div class="seperator"><span>&#183;</span></div>
+  <div class='nav-link nav-tabs-tibo__title' id="webdesign-tab" data-filter='XXe'>XXe</div>
   <div class='nav-line'></div>
 </div>
 
