--- a/app/assets/stylesheets/components/_nav-projects.scss
+++ b/app/assets/stylesheets/components/_nav-projects.scss
@@ -2,11 +2,13 @@
   font-weight: bold;
   transition: all .3s;
   color: $blue-opaque;
+  opacity: 0.6;
 
   &:hover,
   &.active {
-    color: $blue;
+    color: $blue-opaque;
     cursor: pointer;
+    opacity: 1;
   }
 }
 
@@ -14,7 +16,7 @@
   height: 2px;
   margin: 1rem;
   flex-grow: 1;
-  background: $blue;
+  background: $blue-opaque;
   border-radius: 2px;
 
   &.message-line {
