--- a/app/assets/stylesheets/components/_carousel-show.scss
+++ b/app/assets/stylesheets/components/_carousel-show.scss
@@ -43,6 +43,9 @@
   padding: .25rem .5rem;
   box-shadow: 0px 4px 16px rgba(0,0,0,0.3);
   width: fit-content;
+  // position: relative;
+  // right: 200px;
+  // bottom: 200px;
 }
 
 .description__client {
